# 2021-group-08

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  code-of-conduct.md  helloworld.cpp
include/: catch.hpp
modules/DataProcessor/include/: DataProcessor.hpp
modules/DataProcessor/src/: DataProcessor.cpp
modules/ObjectDetection/include/: ObjectDetection.hpp
modules/ObjectDetection/src/: ObjectDetection.cpp
modules/ObjectDetection/test/: ObjectDetectionTest.cpp
modules/ObjectDetector/include/: ObjectDetector.hpp
modules/ObjectDetector/src/: ObjectDetector.cpp
modules/ObjectDetector/test/: CatchMain.cpp  ObjectDetectionTest.cpp
modules/SteeringWheelCalculator/include/: SteeringWheelCalculator.hpp
modules/SteeringWheelCalculator/src/: SteeringWheelCalculator.cpp
src/: DriverYourself.cpp  PrimeChecker.cpp
